native/cbl-dart/src/Fleece+Dart.h

// Slice -------------------------------------------------------------------

/**
 * See `FLSlice` in Dart code.
 */
struct CBLDart_FLSlice {
  const void *buf;
  uint64_t size;
};
struct CBLDart_FLSliceResult {
  const void *buf;
  uint64_t size;
};
typedef CBLDart_FLSlice CBLDart_FLString;
CBLDART_EXPORT
uint8_t CBLDart_FLSlice_Equal(CBLDart_FLSlice a, CBLDart_FLSlice b);
CBLDART_EXPORT
int64_t CBLDart_FLSlice_Compare(CBLDart_FLSlice a, CBLDart_FLSlice b);
CBLDART_EXPORT
CBLDart_FLSliceResult CBLDart_FLSliceResult_New(uint64_t size);
CBLDART_EXPORT
CBLDart_FLSliceResult CBLDart_FLSlice_Copy(CBLDart_FLSlice slice);
CBLDART_EXPORT
void CBLDart_FLSliceResult_BindToDartObject(Dart_Handle object,
                                            CBLDart_FLSliceResult slice,
                                            uint8_t retain);
CBLDART_EXPORT
void CBLDart_FLSliceResult_Release(CBLDart_FLSliceResult slice);
// Doc ---------------------------------------------------------------------

CBLDART_EXPORT
FLDoc CBLDart_FLDoc_FromJSON(CBLDart_FLString json, FLError *errorOut);
CBLDART_EXPORT
void CBLDart_FLDoc_BindToDartObject(Dart_Handle object, FLDoc doc);
CBLDART_EXPORT
void CBLDart_FLSlot_SetString(FLSlot slot, CBLDart_FLString value);