packages/cbl_ffi/lib/src/fleece.dart

import 'dart:ffi';
import 'dart:typed_data';

import 'package:ffi/ffi.dart';

import 'base.dart';
import 'bindings.dart';
import 'utils.dart';

// === Common ==================================================================

class FLCopyFlag extends Option {
  const FLCopyFlag._(String name, int bits) : super(name, bits);

  static const deepCopy = FLCopyFlag._('deepCopy', 1);
  static const copyImmutables = FLCopyFlag._('copyImmutables', 2);

  static const values = [deepCopy, copyImmutables];
}

// === Error ===================================================================

enum FLErrorCode {
  noError,
  memoryError,
  outOfRange,
  invalidData,
  encodeError,
  jsonError,
  unknownValue,
  internalError,
  notFound,
  sharedKeysStateError,
  posixError,
  unsupported,
}

extension FLErrorCodeIntExt on int {
  FLErrorCode toFleeceErrorCode() {
    assert(this >= 0 && this <= 12);
    return FLErrorCode.values[this];
  }
}

late final _globalFleeceErrorCode =
    CBLBindings.instance.fleece._globalFleeceErrorCode;

void _checkFleeceError() {
  final code = _globalFleeceErrorCode.value.toFleeceErrorCode();
  if (code != FLErrorCode.noError) {
    throw CBLErrorException(CBLErrorDomain.fleece, code, 'Fleece error');
  }
}

extension _FleeceErrorExt<T> on T {
  T checkFleeceError() {
    final self = this;
    if (this == nullptr || self is FLSliceResult && self.buf == nullptr) {
      _checkFleeceError();
    }
    return this;
  }
}

// === Slice ===================================================================

class FLSlice extends Struct {
  external Pointer<Uint8> buf;

  // TODO: use correct type
  // This is actually a size_t, but Dart FFI does not support it yet.
  // See https://github.com/dart-lang/sdk/issues/36140.
  // We work around this by translating between an actual FLSlice(Result)
  // and this fixed size struct. Also applies to FLSliceResult, FLString and
  // FLStringResult.
  @Uint64()
  external int size;
}

extension FLSliceExt on FLSlice {
  bool get isNull => buf == nullptr;
  Uint8List? toUint8List() =>
      isNull ? null : Uint8List.fromList(buf.asTypedList(size));
}

class FLSliceResult extends Struct {
  external Pointer<Uint8> buf;

  @Uint64()
  external int size;
}

extension FLResultSliceExt on FLSliceResult {
  bool get isNull => buf == nullptr;
  Uint8List? toUint8List() =>
      isNull ? null : Uint8List.fromList(buf.asTypedList(size));
}

class FLString extends Struct {
  external Pointer<Uint8> buf;

  @Uint64()
  external int size;
}

extension FLStringExt on FLString {
  bool get isNull => buf == nullptr;
  String? toDartString() =>
      isNull ? null : buf.cast<Utf8>().toDartString(length: size);
}

class FLStringResult extends Struct {
  external Pointer<Uint8> buf;

  @Uint64()
  external int size;
}

extension FLStringResultExt on FLStringResult {
  bool get isNull => buf == nullptr;
  String? toDartStringAndRelease() {
    if (isNull) {
      return null;
    }

    final result = buf.cast<Utf8>().toDartString(length: size);

    CBLBindings.instance.fleece.slice.releaseStringResult(this);

    return result;
  }
}

late final nullFLSlice = CBLBindings.instance.fleece.slice.nullSlice;
late final nullFLString =
    CBLBindings.instance.fleece.slice.nullSlice.cast<FLString>();
late final globalFLSlice = CBLBindings.instance.fleece.slice.globalSlice;
late final globalFLSliceResult =
    CBLBindings.instance.fleece.slice.globalSliceResult;
late final globalFLString =
    CBLBindings.instance.fleece.slice.globalSlice.cast<FLString>();

extension TypedDataFLSliceExt on TypedData {
  Pointer<FLSlice> copyToGlobalSliceInArena() {
    final buf = zoneArena.allocate<Uint8>(lengthInBytes);

    buf.asTypedList(lengthInBytes).setAll(0, buffer.asUint8List());

    globalFLSlice.ref
      ..buf = buf
      ..size = lengthInBytes;

    return globalFLSlice;
  }
}

typedef CBLDart_FLSlice_Equal_C = Uint8 Function(FLSlice a, FLSlice b);
typedef CBLDart_FLSlice_Equal = int Function(FLSlice a, FLSlice b);

typedef CBLDart_FLSlice_Compare_C = Int64 Function(FLSlice a, FLSlice b);
typedef CBLDart_FLSlice_Compare = int Function(FLSlice a, FLSlice b);

typedef CBLDart_FLSliceResult_New_C = FLSliceResult Function(Uint64 size);
typedef CBLDart_FLSliceResult_New = FLSliceResult Function(int size);

typedef CBLDart_FLSlice_Copy_C = FLSliceResult Function(FLSlice slice);
typedef CBLDart_FLSlice_Copy = FLSliceResult Function(FLSlice slice);

typedef CBLDart_FLSliceResult_BindToDartObject_C = Void Function(
  Handle object,
  FLSliceResult slice,
  Uint8 retain,
);
typedef CBLDart_FLSliceResult_BindToDartObject = void Function(
  Object object,
  FLSliceResult slice,
  int retain,
);

typedef CBLDart_FLSliceResult_Release_C = Void Function(FLSliceResult);
typedef CBLDart_FLSliceResult_Release = void Function(FLSliceResult);
typedef CBLDart_FLStringResult_Release_C = Void Function(FLStringResult);
typedef CBLDart_FLStringResult_Release = void Function(FLStringResult);

class SliceBindings extends Bindings {
  SliceBindings(Bindings parent) : super(parent) {
    _equal = libs.cblDart
        .lookupFunction<CBLDart_FLSlice_Equal_C, CBLDart_FLSlice_Equal>(
      'CBLDart_FLSlice_Equal',
    );
    _compare = libs.cblDart
        .lookupFunction<CBLDart_FLSlice_Compare_C, CBLDart_FLSlice_Compare>(
      'CBLDart_FLSlice_Compare',
    );
    _new = libs.cblDart
        .lookupFunction<CBLDart_FLSliceResult_New_C, CBLDart_FLSliceResult_New>(
      'CBLDart_FLSliceResult_New',
    );
    _copy = libs.cblDart
        .lookupFunction<CBLDart_FLSlice_Copy_C, CBLDart_FLSlice_Copy>(
      'CBLDart_FLSlice_Copy',
    );
    _bindToDartObject = libs.cblDart.lookupFunction<
        CBLDart_FLSliceResult_BindToDartObject_C,
        CBLDart_FLSliceResult_BindToDartObject>(
      'CBLDart_FLSliceResult_BindToDartObject',
    );
    _releaseSliceResult = libs.cblDart.lookupFunction<
        CBLDart_FLSliceResult_Release_C, CBLDart_FLSliceResult_Release>(
      'CBLDart_FLSliceResult_Release',
    );
    _releaseStringResult = libs.cblDart.lookupFunction<
        CBLDart_FLStringResult_Release_C, CBLDart_FLStringResult_Release>(
      'CBLDart_FLSliceResult_Release',
    );
  }

  late final Pointer<FLSlice> nullSlice = malloc()
    ..ref.buf = nullptr
    ..ref.size = 0;
  late final Pointer<FLSlice> globalSlice = malloc();
  late final Pointer<FLSliceResult> globalSliceResult = globalSlice.cast();

  late final CBLDart_FLSlice_Equal _equal;
  late final CBLDart_FLSlice_Compare _compare;

  late final CBLDart_FLSliceResult_New _new;
  late final CBLDart_FLSlice_Copy _copy;
  late final CBLDart_FLSliceResult_BindToDartObject _bindToDartObject;
  late final CBLDart_FLSliceResult_Release _releaseSliceResult;
  late final CBLDart_FLStringResult_Release _releaseStringResult;

  bool equal(FLSlice a, FLSlice b) {
    return _equal(a, b).toBool();
  }

  int compare(FLSlice a, FLSlice b) {
    return _compare(a, b);
  }

  FLSliceResult create(int size) {
    return _new(size);
  }

  FLSliceResult copy(FLSlice slice) {
    return _copy(slice);
  }

  void bindToDartObject(Object object, FLSliceResult sliceResult, bool retain) {
    _bindToDartObject(object, sliceResult, retain.toInt());
  }

  void releaseSliceResult(FLSliceResult result) {
    _releaseSliceResult(result);
  }

  void releaseStringResult(FLStringResult result) {
    _releaseStringResult(result);
  }

  @override
  void dispose() {
    malloc.free(nullSlice);
    malloc.free(globalSlice);
    super.dispose();
  }
}

// === Slot ====================================================================

class FLSlot extends Opaque {}

typedef FLSlot_SetNull_C = Void Function(Pointer<FLSlot> slot);
typedef FLSlot_SetNull = void Function(Pointer<FLSlot> slot);

typedef FLSlot_SetBool_C = Void Function(Pointer<FLSlot> slot, Uint8 value);
typedef FLSlot_SetBool = void Function(Pointer<FLSlot> slot, int value);

typedef FLSlot_SetInt_C = Void Function(Pointer<FLSlot> slot, Int64 value);
typedef FLSlot_SetInt = void Function(Pointer<FLSlot> slot, int value);

typedef FLSlot_SetDouble_C = Void Function(Pointer<FLSlot> slot, Double value);
typedef FLSlot_SetDouble = void Function(Pointer<FLSlot> slot, double value);

typedef CBLDart_FLSlot_SetString_C = Void Function(
  Pointer<FLSlot> slot,
  FLString value,
);
typedef CBLDart_FLSlot_SetString = void Function(
  Pointer<FLSlot> slot,
  FLString value,
);

typedef FLSlot_SetData_C = Void Function(
  Pointer<FLSlot> slot,
  FLSlice value,
);
typedef FLSlot_SetData = void Function(
  Pointer<FLSlot> slot,
  FLSlice value,
);

typedef FLSlot_SetValue_C = Void Function(
  Pointer<FLSlot> slot,
  Pointer<FLValue> value,
);
typedef FLSlot_SetValue = void Function(
  Pointer<FLSlot> slot,
  Pointer<FLValue> value,
);

class SlotBindings extends Bindings {
  SlotBindings(Bindings parent) : super(parent) {
    _setNull = libs.cbl.lookupFunction<FLSlot_SetNull_C, FLSlot_SetNull>(
      'FLSlot_SetNull',
    );
    _setBool = libs.cbl.lookupFunction<FLSlot_SetBool_C, FLSlot_SetBool>(
      'FLSlot_SetBool',
    );
    _setInt = libs.cbl.lookupFunction<FLSlot_SetInt_C, FLSlot_SetInt>(
      'FLSlot_SetInt',
    );
    _setDouble = libs.cbl.lookupFunction<FLSlot_SetDouble_C, FLSlot_SetDouble>(
      'FLSlot_SetDouble',
    );
    _setString = libs.cblDart
        .lookupFunction<CBLDart_FLSlot_SetString_C, CBLDart_FLSlot_SetString>(
      'CBLDart_FLSlot_SetString',
    );
    _setData = libs.cblDart.lookupFunction<FLSlot_SetData_C, FLSlot_SetData>(
      'FLSlot_SetData',
    );
    _setValue = libs.cbl.lookupFunction<FLSlot_SetValue_C, FLSlot_SetValue>(
      'FLSlot_SetValue',
    );
  }

  late final FLSlot_SetNull _setNull;
  late final FLSlot_SetBool _setBool;
  late final FLSlot_SetInt _setInt;
  late final FLSlot_SetDouble _setDouble;
  late final CBLDart_FLSlot_SetString _setString;
  late final FLSlot_SetData _setData;
  late final FLSlot_SetValue _setValue;

  void setNull(Pointer<FLSlot> slot) {
    _setNull(slot);
  }

  void setBool(Pointer<FLSlot> slot, bool value) {
    _setBool(slot, value.toInt());
  }

  void setInt(Pointer<FLSlot> slot, int value) {
    _setInt(slot, value);
  }

  void setDouble(Pointer<FLSlot> slot, double value) {
    _setDouble(slot, value);
  }

  void setString(Pointer<FLSlot> slot, String value) {
    stringTable
        .autoFree(() => _setString(slot, stringTable.flString(value).ref));
  }

  void setData(Pointer<FLSlot> slot, TypedData value) {
    withZoneArena(() => _setData(slot, value.copyToGlobalSliceInArena().ref));
  }

  void setValue(Pointer<FLSlot> slot, Pointer<FLValue> value) {
    _setValue(slot, value);
  }
}

// === Doc =====================================================================

class FLDoc extends Opaque {}

typedef CBLDart_FLDoc_FromJSON = Pointer<FLDoc> Function(
  FLString json,
  Pointer<Uint32> errorOut,
);

typedef CBLDart_FLDoc_BindToDartObject_C = Void Function(
  Handle object,
  Pointer<FLDoc> doc,
);
typedef CBLDart_FLDoc_BindToDartObject = void Function(
  Object object,
  Pointer<FLDoc> doc,
);

typedef FLDoc_GetRoot = Pointer<FLValue> Function(Pointer<FLDoc> doc);

class DocBindings extends Bindings {
  DocBindings(Bindings parent) : super(parent) {
    _fromJSON = libs.cblDart
        .lookupFunction<CBLDart_FLDoc_FromJSON, CBLDart_FLDoc_FromJSON>(
      'CBLDart_FLDoc_FromJSON',
    );
    _bindToDartObject = libs.cblDart.lookupFunction<
        CBLDart_FLDoc_BindToDartObject_C, CBLDart_FLDoc_BindToDartObject>(
      'CBLDart_FLDoc_BindToDartObject',
    );
    _getRoot = libs.cbl.lookupFunction<FLDoc_GetRoot, FLDoc_GetRoot>(
      'FLDoc_GetRoot',
    );
  }

  late final CBLDart_FLDoc_FromJSON _fromJSON;
  late final CBLDart_FLDoc_BindToDartObject _bindToDartObject;
  late final FLDoc_GetRoot _getRoot;
